Pad content underneath nav bar to avoid cutoff

--- a/assets/styles/extra.css
+++ b/assets/styles/extra.css
@@ -14,3 +14,8 @@ p {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
+
+/* Pad the page contents down to avoid cutting images */
+div.nav-padding {
+    height: 50px;
+}
